--- a/index.html
+++ b/index.html
@@ -246,6 +246,37 @@
 	</div>
 
 
+<script>
+	// 加载页脚上线时间
+	function siteTime(){
+		window.setTimeout("siteTime()", 1000);
+		var seconds = 1000
+		var minutes = seconds * 60
+		var hours = minutes * 60
+		var days = hours * 24
+		var years = days * 365
+		var today = new Date()
+		var todayYear = today.getFullYear()
+		var todayMonth = today.getMonth()
+		var todayDate = today.getDate()
+		var todayHour = today.getHours()
+		var todayMinute = today.getMinutes()
+		var todaySecond = today.getSeconds()
+		var t1 = Date.UTC(2023,1,3,11,23,35)
+		var t2 = Date.UTC(todayYear,todayMonth,todayDate,todayHour,todayMinute,todaySecond)
+		var diff = t2-t1
+		var diffYears = Math.floor(diff/years)
+		var diffDays = Math.floor((diff/days)-diffYears*365)
+		var diffHours = Math.floor((diff-(diffYears*365+diffDays)*days)/hours)
+		var diffMinutes = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours)/minutes)
+		var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds)
+		document.getElementById("sitetime").innerHTML='<span class="text_7">已上线: <span class="text_6">' + (diffYears*365+diffDays) + '</span> 天 - <span class="text_6">' + diffHours + '</span> 小时 - <span class="text_6">' + diffMinutes + '</span> 分 - <span class="text_6">' + diffSeconds + '</span> 秒</span>'
+	}
+	siteTime();
+</script>
+
+
+
 
 
 </body>
