--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="shortcut icon" href="resource/Haku.ico" />
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="text.css">
+
+	<link rel="stylesheet" type="text/css" media="screen and (min-width: 1420px) and (max-width: 1800px)" href="screen/1420-1800.css" />
 	<script src="script.js"></script>
 </head>
 <body oncontextmenu="openMenu(event)" >
