--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 	<link rel="shortcut icon" href="resource/Haku.ico" />
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="text.css">
+	<link rel="stylesheet" href="loading.css">
 
 	<link rel="stylesheet" type="text/css" media="screen and (min-width: 1420px) and (max-width: 1800px)" href="screen/1420-1800.css" />
 	<script src="script.js"></script>
 </head>
 <body oncontextmenu="openMenu(event)" >
 
-
+<!-- 加载动画 -->
+<section class="bg"></section>
+<div class="text">0%</div>
+<script src="loading.js"></script>
 
 <!-- 加载背景   参考了 "豆苗学前端" 的循环滚动图片 -->
 <div class="background-color"></div>
@@ -99,7 +103,6 @@
 <p class="text_1">There are some magic words，aren't here?</p>
 
 <div class="p_2 frosted_glass"></div>
-
 
 
 
