--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <!-- 网站内容 -->
 
 <div class="p_1 frosted_glass"></div>
-<p class="text_1">There are some magic words，aren't here?</p>
+<p class="text_1">网站正在缓慢建设中...</p>
 
 <div class="p_2 frosted_glass"></div>
 
