--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 			</div>
 			<div class="progress-area">
 				<div class="progress-bar">
-					<audio id="main-audio" src=""></audio>
+					<audio id="main-audio" src="" preload="auto"></audio>
 				</div>
 				<div class="song-timer">
 					<span class="current-time">0:00</span>
