--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <!-- 以下内容将会淡入 -->
 <span style="opacity: 0" id="main">
 
-<!-- 提前加载页脚, 防止覆盖白龙 -->
+<!-- 提前加载页脚，防止覆盖白龙 -->
 <div class="foot_1">
 
 		<p>
