--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
 				<img alt="" class="big"/>
 			</div>
 			<div class="song-details">
-				<p class="name fade-in" style="opacity: 0" >ㅤ</p>
-				<p class="artist fade-in" style="opacity: 0" >ㅤ</p>
+				<p class="name">ㅤ</p>
+				<p class="artist">ㅤ</p>
 			</div>
 			<div class="progress-area">
 				<div class="progress-bar">
-					<audio id="main-audio" src=""></audio>
+					<audio id="main-audio" src="" preload="auto"></audio>
 				</div>
 				<div class="song-timer">
 					<span class="current-time">0:00</span>
