--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
 	let time1 = setInterval(() => {
 		loading++
  		 if(loading > 99) {
-    			background.style.visibility = 'hidden';
-       			text.style.visibility = 'hidden';
+    			//background.style.visibility = 'hidden';
+       			//text.style.visibility = 'hidden';
+			text.classList.add('backgroundz');
+			background.classList.add('backgroundz');
        			clearInterval(time1);
-			hello();
 		}
 
 		text.innerHTML = `${loading} %`
@@ -106,11 +107,11 @@
 <div class="background-color"></div>
 <div class="background" id="background">
 	<ul id="list">
-		<li><img src="resource/0.png" class="fade-in" /></li>
-		<li><img src="resource/2.png" class="fade-in" /></li>
-		<li><img src="resource/0.png" class="fade-in" /></li>
-		<li><img src="resource/3.png" class="fade-in" /></li>
-		<li><img src="resource/1.png" class="fade-in" /></li>
+		<li><img src="resource/0.png" class="cloud" /></li>
+		<li><img src="resource/2.png" class="cloud" /></li>
+		<li><img src="resource/0.png" class="cloud" /></li>
+		<li><img src="resource/3.png" class="cloud" /></li>
+		<li><img src="resource/1.png" class="cloud" /></li>
 	<script>
 		var box = document.getElementById('background');
 		var list = document.getElementById('list');
@@ -143,11 +144,8 @@
 
 
 
-<!-- 以下内容将会淡入 -->
-<span style="opacity: 0" id="main">
-
 <!-- 提前加载页脚，防止覆盖白龙 -->
-<div class="foot_1">
+<div class="foot_1 foot-o" id="foot">
 
 		<p>
 			<a href="https://www.bilibili.com" target="_blank" class="foot_2">
@@ -165,8 +163,8 @@
 		</p>
 
 	<center>
-		<hr size=1 style="opacity: 0.5; color: rgba(100, 102, 102, 0.5);" />
-		<span class="text_4">Copyright © 2023 </span><a href="https://music.163.com/#/user/home?id=6288053607" target="_blank" class="text_5" >白龙巜丶</a><span class="text_4">All rights reserved.</span>
+		<hr size=1 style="opacity: 0.5; color: rgba(100, 102, 102, 0.5);"></hr>
+		<span class="text_4">Copyright © 2023 <a href="https://music.163.com/#/user/home?id=6288053607" target="_blank" class="text_5 foot_6">白龙巜丶</a><span class="text_4">ㅤㅤㅤㅤAll rights reserved.</span>
 		<br />
 		<br />
 		<br />
@@ -178,7 +176,7 @@
 
 
 <img src="resource/Haku.png" class="Haku">
-<p class="text_3 fade-in">您的进度:<span class="per" id="per">0 %<span></p>
+<p class="text_3 text_3-o" id="percent">您的进度:<span class="per" id="per">0 %<span></p>
 
 
 
@@ -188,11 +186,16 @@
 <!-- 网站内容 -->
 <span id="p1"></span>
 
-<div class="p_1 frosted_glass"></div>
+
+
+<div class="p_1 out_1 frosted_glass" id="p_1">
 <p class="text_1">网站正在缓慢建设中...</p>
 
-<div class="p_2 frosted_glass"></div>
+</div>
 
+
+
+<div class="p_2 out_1 frosted_glass" id="p_2"></div>
 
 
 
@@ -214,7 +217,7 @@
 
 
 	<!-- 参考了 "山羊の前端小窝" 的侧边栏代码 -->
-	<div class="shell">
+	<div class="shell" id="shell">
 		<a class="e-box"></a>
 
 		<a href="javascript:void(0)" class="box" onclick="fun_2();">
@@ -256,7 +259,7 @@
 
 
 	<!-- 播放器   参考了 "想想卷王怎么做" 的代码 -->
-		<div class="wrapper" style="opacity: 0" id="player">
+		<div class="wrapper out_1" style="" id="player">
 			<div class="img-area">
 				<img alt="" class="big"/>
 			</div>
@@ -337,7 +340,6 @@
 			</a>
 		</ul>
 	</div>
-</span>
 
 <script>
 	// 加载页脚上线时间
