--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 </div>
 
 
-<img src="resource/Haku.png" class="Haku">
+<img src="resource/Haku.png" class="Haku" id="Haku">
 <p class="text_3 text_3-o" id="percent">您的进度:<span class="per" id="per">0 %<span></p>
 
 
