--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 	<!-- 播放器   参考了 "想想卷王怎么做" 的代码 -->
 		<div class="wrapper out_1" style="" id="player">
 			<div class="img-area">
-				<img alt="" class="big"/>
+				<img alt="" class="big" src="resource\player\music-1.jpg" />
 			</div>
 			<div class="song-details">
 				<p class="name">ㅤ</p>
