--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 	let time1 = setInterval(() => {
 		loading++
  		 if(loading > 99) {
-    			//background.style.visibility = 'hidden';
-       			//text.style.visibility = 'hidden';
-			text.classList.add('backgroundz');
-			background.classList.add('backgroundz');
+    			background.style.visibility = 'hidden';
+       			text.style.visibility = 'hidden';
+			//text.classList.add('backgroundz');
+			//background.classList.add('backgroundz');
        			clearInterval(time1);
 		}
 		text.innerHTML = `${loading} %`
@@ -156,18 +156,22 @@
 			<a href="https://github.com/" target="_blank" class="foot_5">
 				<img src="resource/thanks/Github.png" class="big" title="Github." style="opacity:0.8" />
 			<a>
+			<a href="https://nic.eu.org/" target="_blank" class="foot_7">
+				<img src="resource/thanks/eu-org.png" class="big" title="eu.org" style="opacity:0.8" />
+			<a>
 		</p>
 
 	<center>
-		<hr size=1 style="opacity: 0.5; color: rgba(100, 102, 102, 0.5);"></hr>
-		<span class="text_4">Copyright © 2023 <a href="https://music.163.com/#/user/home?id=6288053607" target="_blank" class="text_5 foot_6">白龙巜丶</a><span class="text_4">ㅤㅤㅤㅤAll rights reserved.</span>
+		<hr size=1 style="opacity: 0.5; color: rgba(100, 102, 102, 0.5); width: 80%;"></hr>
+	</center>
+		<span  class="text_4">Copyright © 2023 </span><a href="https://music.163.com/#/user/home?id=6288053607" target="_blank" class="text_5">白龙巜丶</a><span class="text_4">All rights reserved.</span>
 		<br />
 		<br />
 		<br />
 		<br />
 		<p class="text_7">感谢以上网站提供的帮助 !</p>
 		<p class="text_4 fade-in">· <span id="sitetime" class="text_7">已上线: <span class="text_6">0</span> 天 - <span class="text_6">0</span> 小时 - <span class="text_6">0</span> 分 - <span class="text_6">0</span> 秒</span> ·</p>
-	</center>
+
 </div>
 
 
