--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 	let time1 = setInterval(() => {
 		loading++
  		 if(loading > 99) {
-    			background.style.visibility = 'hidden';
-       			text.style.visibility = 'hidden';
+    			//background.style.visibility = 'hidden';
+       			//text.style.visibility = 'hidden';
 			//text.classList.add('backgroundz');
 			//background.classList.add('backgroundz');
        			clearInterval(time1);
