--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 	<center>
 		<hr size=1 style="opacity: 0.5; color: rgba(100, 102, 102, 0.5); width: 80%;"></hr>
 	</center>
-		<span  class="text_4" style="color: rgba(100, 102, 102, 0.8);">
+		<span class="text_4" style="color: rgba(100, 102, 102, 0.8);">
 			Copyright © 2023 
 		</span>
 		<a href="https://music.163.com/#/user/home?id=6288053607" target="_blank" class="text_4"  style="color: rgb(244, 243, 241);">白龙<span style="color: rgb(113, 199, 173);">巜丶</span></a>
@@ -175,7 +175,7 @@
 		<br />
 		<br />
 		<p class="text_7">感谢以上网站提供的帮助 !</p>
-		<p class="text_4 fade-in">· <span id="sitetime" class="text_7">已上线: <span class="text_6">0</span> 天 - <span class="text_6">0</span> 小时 - <span class="text_6">0</span> 分 - <span class="text_6">0</span> 秒</span> ·</p>
+		<p style="color: rgba(100, 102, 102, 0.8);">· <span id="sitetime" class="text_7">已上线: <span class="text_6">0</span> 天 - <span class="text_6">0</span> 小时 - <span class="text_6">0</span> 分 - <span class="text_6">0</span> 秒</span> ·</p>
 
 </div>
 
